# Fit2Geo

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/: dependabot.yml
.github/workflows/: tests.yml
src/fit2geo/: fit2shape.py
test/: test_shape.py
test/data/: 9270632244.fit  9276320389.fit
