[metadata]
name = fit2geo
description = Tools to convert FIT files into geometric shape files
author = Dan Martin
license = Martin
license_file = license
platforms = linux, win32
classifiers = 
    Programming Language :: Python :: 3.10

[options]
packages =
    fit2geo
install_requires =
    fitdecode
    shapely
python_requires = >=3.10
package_dir = 
    =src
zip_safe = no


[opetions.extras_require]
testing = 
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[flake8]
max-line-length = 88